fix(imdTickets): fix ticket info alignment

--- a/lab2 - git/imdTicket/style.css
+++ b/lab2 - git/imdTicket/style.css
@@ -45,6 +45,7 @@ p{
     grid-template-rows: auto;
     margin: 10px;
     background: black;
+    text-align: center;
 }
 
 .container .info h2{
@@ -103,7 +104,7 @@ p{
         grid-column: 1/4;
         grid-row: 4/6;
         grid-template-columns: repeat(3, 1fr);
-        text-align: center;
+        padding-top: 20px;
     }
 
     .container .info .price{
